# SRPL-MicroLLTV

./: CMakeLists.txt  package.xml
doc/: 2022-04-10-18-00-22.bag.active  v_system_component_test_startup_procedure.txt
gazebo/models/srpl_mass_on_rails/: model.config  model.sdf
gazebo/models/urdf/: model.config  mono_thruster.xacro  srpl_mass_on_rails_model.urdf  srpl_mass_on_rails_model.xacro
gazebo/plugins/: CMakeLists.txt  package.xml
gazebo/plugins/model_push/: model_force.cc  model_force.world
gazebo/plugins/srpl_micro_lltv/: MonoThrusterPlugin.cc  srpl_mass_balance.cpp
gazebo/plugins/srpl_micro_lltv/include/: MonoThrusterPlugin.hh
gazebo/worlds/: srpl_rail_sim.world
launch/: state_estimate.launch
msg/: OneDFuelMassStamped.msg  OneDThrusterCmdStamped.msg  ThrusterCmdStamped.msg
scripts/1D_control/: vtest_main_ros.py  vtest_model_ros.py
scripts/gpio/: purge_valve.py  system_vtest.py  thruster_control_gpio.py  thruster_test.py
scripts/laser_measure/: height_measure.py
sim_script/1D-control/: VTest_MPC.py  VTest_Main.py  VTest_Model.py  VTest_Simulator.py
src/: one_dim_ocp.cpp  one_dim_ocp_MPver.cpp  one_dim_ocp_MPver2.cpp  one_dim_ocp_MPver2_rpi4.cpp  one_dim_traj.cpp
src/one_dim_state_estimate/: .OneDimExpKalman_main.cpp.swp  OneDimExpKalman_main.cpp  OneDimExpPositionMeasurementModle.hpp  OneDimExpSystemModel.hpp
